# kejani_io

./: README.md  manage.py  pyproject.toml  requirement.txt
accounts/: tests.py  views.py
api/: urls.py  views.py
contacts/: views.py
contacts/migrations/: 0001_initial.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_propertylisting.py
core/templates/core/: base.html  home.html
kejani_io/: asgi.py  settings.py  urls.py  wsgi.py
kejani_io/static/admin/js/admin/: DateTimeShortcuts.js
kejani_io/static/css/: style.css
listings/: admin.py  choices.py  models.py  views.py
listings/migrations/: 0001_initial.py  0002_rename_state_listing_county.py  0003_remove_listing_sqft_remove_listing_zipcode.py  0004_remove_listing_lot_size.py  0005_alter_listing_photo_1_alter_listing_photo_2_and_more.py
realtors/migrations/: 0001_initial.py
templates/: base.html
templates/accounts/: dashboard.html
templates/admin/: base_site.html
templates/listings/: listing.html  listings.html  search.html
templates/pages/: about.html  index.html
templates/partials/: _footer.html  _navbar.html  _topbar.html
