[tool.poetry]
name = "kejani-io"
version = "0.1.0"
description = ""
authors = ["bagoviggo <bagoviggo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
asgiref = "^3.2.10"
Django = "^3.1.1"
gunicorn = "^20.0.4"
paytmchecksum = "^1.7.0"
Pillow = "^7.2.0"
pycryptodome = "^3.9.8"
pytz = "^2020.1"
sqlparse = "^0.3.1"
whitenoise = "^5.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
